--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /temperatur_differenz_messer/config.h
 /scripte/3phasiger_lastverlauf.csv
 /scripte/3phasiger_lastverlauf_detail.csv
+/test/config.h
