Claude: file_reader test

--- a/zentrale/host_tests/Makefile
+++ b/zentrale/host_tests/Makefile
@@ -1,18 +1,21 @@
 CXX = g++
 CXXFLAGS = -std=c++17 -Wall -Wextra -g -I./mocks -I..
 
-TESTS = tests/web_reader_test.cpp
-TARGET = test_runner
+TARGETS = test_web_reader test_file_reader
 
 .PHONY: all clean test
 
-all: $(TARGET)
+all: $(TARGETS)
 
-$(TARGET): $(TESTS)
+test_web_reader: tests/web_reader_test.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
-test: $(TARGET)
-	./$(TARGET)
+test_file_reader: tests/file_reader_test.cpp
+	$(CXX) $(CXXFLAGS) -o $@ $^
+
+test: $(TARGETS)
+	@echo "=== Running all tests ==="
+	@./test_web_reader && ./test_file_reader
 
 clean:
-	rm -f $(TARGET)
+	rm -f $(TARGETS)
